fixed a styling problem where elements within resized tabs (Candy.View.Pane.Chat.fitTabs) were too small.

--- a/res/default.css
+++ b/res/default.css
@@ -46,18 +46,18 @@ ul {
 	float: left;
 	position: relative;
 	white-space: nowrap;
+	margin: 3px 0 0 3px;
+	background-color: #666;
 }
 
 #chat-tabs a {
-	background-color: #666;
-	margin: 3px 0 0 3px;
 	padding: 4px 50px 4px 10px;
 	display: inline-block;
 	color: #bbb;
 	height: 20px;
 }
 
-#chat-tabs .active a {
+#chat-tabs .active, #chat-tabs .active a {
 	background-color: #eee;
 	color: black;
 }
@@ -79,7 +79,7 @@ ul {
 	right: 0;
 	height: auto;
 	padding: 5px;
-	margin: 3px 5px 0 2px;
+	margin: 0 5px 0 2px;
 	color: #999;
 }
 
@@ -98,7 +98,7 @@ ul {
 	font-weight: bold;
 	font-size: 10px;
 	position: absolute;
-	top: 8px;
+	top: 5px;
 	right: 22px;
 	border-radius: 3px;
 }
@@ -319,7 +319,7 @@ ul {
 .message-pane small {
 	display: none;
 	width: 55px;
-	color: #888;
+	color: #a00;
 	font-size: 10px;
 	position: absolute;
 	background-color: #f7f7f7;
